--- a/homework/Day002_change_color_space_HW.ipynb
+++ b/homework/Day002_change_color_space_HW.ipynb
@@ -7,13 +7,13 @@
     "# 知識點\n",
     "1. 除了常見的 RGB 以外，還有以下常見色彩表示法:\n",
     "    - HSB、HSV - 色相(Hue)、飽和度(Saturation)、明度(Brightness、Value)\n",
-    "        <img src='hsv.png' width=200>\n",
+    "        <img src='img/hsv.png' width=200>\n",
     "        其中 Hue 以 360 度決定顏色<br>\n",
     "        Saturation 以 0~100% 決定色彩純度，白、黑、灰色系色彩的飽和度為 0<br>\n",
     "        Brightness 以 0~100% 決定鮮豔程度，黑色明度為 0<br><br>\n",
     "        \n",
     "    - HSL - 色相(Hue)、飽和度(Saturation)、亮度(Lightness)\n",
-    "        <img src='hsl.png' width=200>\n",
+    "        <img src='img/hsl.png' width=200>\n",
     "        \n",
     "     HSL 在飽和度跟明亮度與 HSB 的表示有點不同\n",
     "     \n",
@@ -28,7 +28,7 @@
     "     比較兩者可以發現 HSL 的白色在最上面，HSB/HSV 的白色在圓心。\n",
     "     \n",
     "    - Lab\n",
-    "        <img src='lab.png' width=200>\n",
+    "        <img src='img/lab.png' width=200>\n",
     "        \n",
     "        與 RGB 相比，可以表示的顏色範圍更大也更接近人眼可以感知的範圍。<br>\n",
     "        其中 L = Lighness 以 0 ~ 100 決定明亮度，數值由小到大，由黑到白。<br>\n",
